/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/5.1.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'

    id 'maven'
}

version = "1.0-dev"
group = "t.cog.balok"
description = "A tiny balok backend to tackle dumped memory accesses"
applicationDefaultJvmArgs = ["-Xms4g", "-Xmx4g", "-Xss1m", 
// debug options
//"-XX:+PrintGCDetails", 
//"-XX:+PrintGCApplicationStoppedTime", 
//"-XX:+PrintGCApplicationConcurrentTime", 
//"-XX:+PrintGCDateStamps",
"-XX:+HeapDumpOnOutOfMemoryError",
"-XX:HeapDumpPath=/tmp/heapdump.bin",
]

repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenLocal()
    jcenter()
    maven {
        url "https://bitbucket.org/cogumbreiro/maven-repository/raw/master/"
    }
}

dependencies {
    compile "t.cog.balok:balok:1.0-dev"
    compile "com.carrotsearch:hppc:0.7.2"
    compile group: 'org.jctools', name: 'jctools-core', version: '2.1.1'
    compile group: 'com.esotericsoftware.kryo', name: 'kryo', version: '2.24.0'
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.5.4'
    compile group: 'org.lz4', name: 'lz4-java', version: '1.5.1'

    // This dependency is found on compile classpath of this component and consumers.
    implementation 'com.google.guava:guava:26.0-jre'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

// Define the main class for the application
mainClassName = 'backend.App'
